[package]
name = "nuclaw"
version = "1.0.0"
description = "Personal Claude assistant. Lightweight, secure, customizable."
edition = "2021"
authors = ["Eric <eric@example.com>"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# SQLite database - using rusqlite for simpler offline compilation
rusqlite = { version = "0.32", features = ["bundled", "serde_json", "chrono"] }

# Cron parsing
cron = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR code generation
qrcode = "0.13"

# Path manipulation
home = "0.5"

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1.10"

# File operations
tempfile = "3.12"

# Error handling
thiserror = "2.0"

# CLI arguments
structopt = "0.3"

# Random for ID generation
rand = "0.8"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
